--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script defer src="movies.js"></script>
-    <script type="module" defer src="script.js"></script>
+    <script defer src="script.js"></script>
 
     <link rel="stylesheet" type="text/css" href="./styles/style.css" />
 
